--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
 <!-- Banner -->
 
-<div class="banner flex-container">
+<div class="banner flex">
   <div class="image">
     <img src="resources/images/banner.jpg" />
   </div>
   <div class="article">
     <h1>Learn something new everyday</h1>
-    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
     <div class="button">
       <span>Start here</span>
     </div>
