--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
   <div class="article">
     <h1>Learn something new everyday</h1>
     <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-    <div class="button">
-      <span>Start here</span>
-    </div>
+    <span class="button">Start here</span>
   </div>
 </div>
 
