--- a/index.html
+++ b/index.html
@@ -35,5 +35,37 @@
   </div>
 </div>
 
+<!-- Blog -->
+
+<div class="blog flexcontent1">
+  <div class="element flexcontent1">
+    <div class="teaserimage">
+      <img src="resources/images/information-main.jpg" />
+    </div>
+    <div class="teasertext">
+      <h1>It doesn´t hurt to keep practicing</h1>
+      <h2>"Curabitur vitae liebero in ipsum porttitor consequat. Aliquan et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula.</h2>
+      <h4>Emanuel, Sr Strategist at Hiring.com</h4>
+    </div>
+  </div>
+  <div class="bites flexcontent2">
+    <div class="biteimage">
+      <img src="resources/images/information-orientation.jpg" />
+    </div>
+    <div class="bitetext">
+      <h2>Orientation Date</h1>
+      <h3>Tue 10/11 & Wed 10/12: 8am-3pm.</h3>
+      <h4><a href="#">Read more</a></h4>
+    </div>
+
+    
+
+  </div>
+
+</div>
+
+
+
+
   </body>
 </html>
