--- a/index.html
+++ b/index.html
@@ -57,15 +57,100 @@
       <h3>Tue 10/11 & Wed 10/12: 8am-3pm.</h3>
       <h4><a href="#">Read more</a></h4>
     </div>
+    <div class="biteimage">
+      <img src="resources/images/information-campus.jpg" />
+    </div>
+    <div class="bitetext">
+      <h2>Our Campus</h1>
+      <h3>Find which campus is close by you</h3>
+      <h4><a href="#">Read more</a></h4>
+    </div>
+    <div class="biteimage">
+      <img src="resources/images/information-guest-lecture.jpg" />
+    </div>
+    <div class="bitetext">
+      <h2>Our guest lecture</h1>
+      <h3>Join a keynote with Oliver Sack <br> about music in medical treatment</h3>
+      <h4><a href="#">Read more</a></h4>
+    </div>
+  </div>
+</div>
 
-    
+<!-- Course Program -->
 
+<div class="program">
+  <h1>Start learning</h1>
+
+<div class="overview flex-container1">
+
+  <div class="course">
+    <div class="courseimage">
+      <img src="resources/images/course-software.jpg" />
+   </div>
+    <div class="coursetext">
+      <h1>Software Engineering</h1>
+      <h2>COURSES</h2>
+      <h3>Web Development, Mobile Development, iOT, APIs</h3>
+    </div>
+  </div>
+
+  <div class="course">
+    <div class="courseimage">
+      <img src="resources/images/course-computer-art.jpg" />
+   </div>
+    <div class="coursetext">
+      <h1>Computer art</h1>
+      <h2>COURSES</h2>
+      <h3>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</h3>
+    </div>
+  </div>
+
+  <div class="course">
+    <div class="courseimage">
+      <img src="resources/images/course-design.jpg" />
+  </div>
+    <div class="coursetext">
+      <h1>Design</h1>
+      <h2>COURSES</h2>
+      <h3>User Experience Design, User Research, Visual Design</h3>
+    </div>
+  </div>
+
+  <div class="course">
+    <div class="courseimage">
+      <img src="resources/images/course-data.jpg" />
+  </div>
+    <div class="coursetext">
+      <h1>Data</h1>
+      <h2>COURSES</h2>
+      <h3>Data Science, Big Data, SQL, Data Visualization</h3>
+    </div>
+  </div>
+
+  <div class="course">
+    <div class="courseimage">
+      <img src="resources/images/course-business.jpg" />
+  </div>
+    <div class="coursetext">
+      <h1>Business</h1>
+      <h2>COURSES</h2>
+      <h3>Product Development, Business Development, Startup</h3>
+    </div>
+  </div>
+
+  <div class="course">
+    <div class="courseimage">
+      <img src="resources/images/course-marketing.jpg" />
+  </div>
+    <div class="coursetext">
+      <h1>Marketing</h1>
+      <h2>COURSES</h2>
+      <h3>Analytics, Content Marketing, Mobile Marketing</h3>
+    </div>
   </div>
 
 </div>
-
-
-
+</div>
 
   </body>
 </html>
