--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 <div class="program">
   <h1>Start learning</h1>
 
+
 <div class="overview flex-container1">
 
   <div class="course">
@@ -88,8 +89,8 @@
       <img src="resources/images/course-software.jpg" />
    </div>
     <div class="coursetext">
-      <h1>Software Engineering</h1>
-      <h2>COURSES</h2>
+      <h2>Software Engineering</h2>
+      <h3>COURSES</h3>
       <h3>Web Development, Mobile Development, iOT, APIs</h3>
     </div>
   </div>
@@ -99,8 +100,8 @@
       <img src="resources/images/course-computer-art.jpg" />
    </div>
     <div class="coursetext">
-      <h1>Computer art</h1>
-      <h2>COURSES</h2>
+      <h2>Computer art</h2>
+      <h3>COURSES</h3>
       <h3>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</h3>
     </div>
   </div>
@@ -110,8 +111,8 @@
       <img src="resources/images/course-design.jpg" />
   </div>
     <div class="coursetext">
-      <h1>Design</h1>
-      <h2>COURSES</h2>
+      <h2>Design</h2>
+      <h3>COURSES</h3>
       <h3>User Experience Design, User Research, Visual Design</h3>
     </div>
   </div>
@@ -121,8 +122,8 @@
       <img src="resources/images/course-data.jpg" />
   </div>
     <div class="coursetext">
-      <h1>Data</h1>
-      <h2>COURSES</h2>
+      <h2>Data</h2>
+      <h3>COURSES</h3>
       <h3>Data Science, Big Data, SQL, Data Visualization</h3>
     </div>
   </div>
@@ -132,8 +133,8 @@
       <img src="resources/images/course-business.jpg" />
   </div>
     <div class="coursetext">
-      <h1>Business</h1>
-      <h2>COURSES</h2>
+      <h2>Business</h2>
+      <h3>COURSES</h3>
       <h3>Product Development, Business Development, Startup</h3>
     </div>
   </div>
@@ -143,14 +144,60 @@
       <img src="resources/images/course-marketing.jpg" />
   </div>
     <div class="coursetext">
-      <h1>Marketing</h1>
-      <h2>COURSES</h2>
+      <h2>Marketing</h2>
+      <h3>COURSES</h3>
       <h3>Analytics, Content Marketing, Mobile Marketing</h3>
     </div>
   </div>
+</div>
+</div>
 
+<!-- Thesis -->
+
+<div class="thesis">
+  <h1>Thesis exhibit</h1>
+
+  <div class="thesis flexcontent1	">
+    <div class="video">
+      <div class="screen">
+        <video autoplay controls>
+    <source src="resources/videos/thesis.mp4" type="video/mp4">
+    Ihr Browser kann dieses Video nicht wiedergeben.<br/> Dieser Film zeigt ein Video. Sie können ihn unter <a href="#">Link-Addresse</a> abrufen.
+</video>
+      </div>
+      <div class="videotext">
+        <h2>Reimagine urban</h2>
+        <h3>"Curabitur vitae liebero in ipsum porttitor consequat. Aliquan et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula.</h3>
+      </div>
+    </div>
+
+    <div class="exhibit highlight flex-content2">
+      <div class="exhibitimage">
+        <img src="resources/images/thesis-now-and-then.jpg" />
+      </div>
+      <div class="exhibittext">
+        <h2>Fisma: Design and</h2>
+        <h3>Designer Showcase of new prototype product</h3>
+      </div>
+    </div>
+
+    <div class="exhibit flex-content2">
+      <div class="exhibitimage">
+        <img src="resources/images/thesis-fisma.jpg" />
+      </div>
+      <div class="exhibittext">
+        <h2>Now and then</h2>
+        <h3>Research study about New York</h3>
+      </div>
+    </div>
+
+
+    </div>
 </div>
-</div>
+
+
+
+<!-- Footer -->
 
   </body>
 </html>
