--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <div class="thesis">
   <h1>Thesis exhibit</h1>
 
-  <div class="thesis flexcontent1	">
+  <div class="thesis flexcontent1">
     <div class="video">
       <div class="screen">
         <video autoplay controls>
@@ -171,33 +171,29 @@
       </div>
     </div>
 
-    <div class="exhibit highlight flex-content2">
-      <div class="exhibitimage">
-        <img src="resources/images/thesis-now-and-then.jpg" />
-      </div>
-      <div class="exhibittext">
-        <h2>Fisma: Design and</h2>
-        <h3>Designer Showcase of new prototype product</h3>
-      </div>
+    <div class="thesisimage">
+      <img src="resources/images/thesis-fisma.jpg" />
     </div>
-
-    <div class="exhibit flex-content2">
-      <div class="exhibitimage">
-        <img src="resources/images/thesis-fisma.jpg" />
-      </div>
-      <div class="exhibittext">
-        <h2>Now and then</h2>
-        <h3>Research study about New York</h3>
-      </div>
+    <div class="thesistext">
+      <h2>Fisma: Design and</h1>
+      <h3>Designer showcases of new prototype product</h3>
     </div>
+  </div>
 
-
-    </div>
 </div>
 
 
-
 <!-- Footer -->
+
+<footer class="flex-container">
+  <div class="copyright flex-container">
+    <span>© 2016 Colmar Academy. All rights reserved</span>
+  </div>
+  <div class="impress flex-container">
+    <span class="desktop"><a href="#">Terms</a></span>
+    <span class="desktop"><a href="#">Privacy</a></span>
+  </div>
+</footer>
 
   </body>
 </html>
