Add mobile header

--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
   </head>
   <body>
 
+<!-- Desktop -->
+
+<div class="desktop">
+
 <!-- Header -->
 
 <header class="flex-container">
   <div class="logo flex-container">
     <img src="resources/images/ic-logo.svg" />
-    <span>COLMAR</span>
-    <span class="styled">ACADEMY</span>
+    <span class="desktop">COLMAR</span>
+    <span class="desktop styled">ACADEMY</span>
+    <img class="mobile" src="resources/images/ic-on-campus.svg" />
+    <img class="mobile" src="resources/images/ic-online.svg" />
+    <img class="mobile" src="resources/images/ic-login.svg" />
   </div>
   <div class="login flex-container">
     <span class="desktop"><a href="#">On campus</a></span>
@@ -53,7 +60,7 @@
       <img src="resources/images/information-orientation.jpg" />
     </div>
     <div class="bitetext">
-      <h2>Orientation Date</h1>
+      <h2>Orientation Date</h2>
       <h3>Tue 10/11 & Wed 10/12: 8am-3pm.</h3>
       <h4><a href="#">Read more</a></h4>
     </div>
@@ -61,7 +68,7 @@
       <img src="resources/images/information-campus.jpg" />
     </div>
     <div class="bitetext">
-      <h2>Our Campus</h1>
+      <h2>Our Campus</h2>
       <h3>Find which campus is close by you</h3>
       <h4><a href="#">Read more</a></h4>
     </div>
@@ -69,7 +76,7 @@
       <img src="resources/images/information-guest-lecture.jpg" />
     </div>
     <div class="bitetext">
-      <h2>Our guest lecture</h1>
+      <h2>Our guest lecture</h2>
       <h3>Join a keynote with Oliver Sack <br> about music in medical treatment</h3>
       <h4><a href="#">Read more</a></h4>
     </div>
@@ -171,14 +178,22 @@
       </div>
     </div>
 
-    <div class="thesisimage">
-      <img src="resources/images/thesis-fisma.jpg" />
+    <div class="bites flexcontent2">
+      <div class="biteimage">
+        <img src="resources/images/thesis-fisma.jpg" />
+      </div>
+      <div class="bitetext">
+        <h2>Fisma: Design and</h2>
+        <h3>Designer showcases of <br> new prototype product</h3>
+      </div>
+      <div class="biteimage">
+        <img src="resources/images/thesis-now-and-then.jpg" />
+      </div>
+      <div class="bitetext">
+        <h2>Now and then</h2>
+        <h3>Research study about New York</h3>
+      </div>
     </div>
-    <div class="thesistext">
-      <h2>Fisma: Design and</h1>
-      <h3>Designer showcases of new prototype product</h3>
-    </div>
-  </div>
 
 </div>
 
@@ -194,6 +209,29 @@
     <span class="desktop"><a href="#">Privacy</a></span>
   </div>
 </footer>
+</div>
+
+<!-- Mobile -->
+
+ <div class="mobile">
+
+<!-- Header -->
+
+<header class="flex-container">
+  <div class="logo flex-container">
+    <img src="resources/images/ic-logo.svg" />
+    <img src="resources/images/ic-on-campus.svg" />
+    <img src="resources/images/ic-online.svg" />
+    <img src="resources/images/ic-login.svg" />
+  </div>
+  <div class="login flex-container">
+    <span class="desktop"><a href="#">On campus</a></span>
+    <span class="desktop"><a href="#">Online for companies</a></span>
+    <span class="desktop"><a href="#">Sign in</a></span>
+  </div>
+</header>
+
+</div>
 
   </body>
 </html>
