--- a/index.html
+++ b/index.html
@@ -197,7 +197,6 @@
 
 </div>
 
-
 <!-- Footer -->
 
 <footer class="flex-container">
@@ -209,27 +208,97 @@
     <span class="desktop"><a href="#">Privacy</a></span>
   </div>
 </footer>
+  </div>
 </div>
 
 <!-- Mobile -->
 
- <div class="mobile">
+<div class="mobile">
 
 <!-- Header -->
 
 <header class="flex-container">
-  <div class="logo flex-container">
     <img src="resources/images/ic-logo.svg" />
     <img src="resources/images/ic-on-campus.svg" />
     <img src="resources/images/ic-online.svg" />
     <img src="resources/images/ic-login.svg" />
-  </div>
-  <div class="login flex-container">
-    <span class="desktop"><a href="#">On campus</a></span>
-    <span class="desktop"><a href="#">Online for companies</a></span>
-    <span class="desktop"><a href="#">Sign in</a></span>
-  </div>
 </header>
+
+<!-- Banner -->
+
+<div class="banner">
+  <div class="box">
+  </div>
+  <div class="article">
+    <h1>Learn something new everyday</h1>
+    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+    <span class="button">Start here</span>
+    <br><br><br><br>
+  </div>
+</div>
+
+<!-- Blog -->
+
+<div class="bites">
+  <div class="biteimage">
+    <img src="resources/images/information-orientation-mobile.jpg" />
+  </div>
+  <div class="bitetext">
+    <h2>Orientation Date</h2>
+    <h3>Tue 10/11 & Wed 10/12: 8am-3pm.</h3>
+    <h4><a href="#">Read more</a></h4>
+  </div>
+  <div class="biteimage">
+    <img src="resources/images/information-campus-mobile.jpg" />
+  </div>
+  <div class="bitetext">
+    <h2>Our Campus</h2>
+    <h3>Find which campus is close by you</h3>
+    <h4><a href="#">Read more</a></h4>
+  </div>
+  <div class="biteimage">
+    <img src="resources/images/information-guest-lecture-mobile.jpg" />
+  </div>
+  <div class="bitetext">
+    <h2>Our guest lecture</h2>
+    <h3>Join a keynote with Oliver Sack about music in medical treatment</h3>
+    <h4><a href="#">Read more</a></h4>
+  </div>
+</div>
+
+<!-- Courses -->
+
+<div class="program">
+  <h1>Start learning</h1>
+
+<div class="overview">
+
+  <div class="course">
+      <h2>Software Engineering</h2>
+  </div>
+
+  <div class="course">
+      <h2>Computer art</h2>
+  </div>
+
+  <div class="course">
+      <h2>Design</h2>
+  </div>
+
+  <div class="course">
+      <h2>Data</h2>
+  </div>
+
+  <div class="course">
+      <h2>Business</h2>
+  </div>
+
+  <div class="course">
+      <h2>Marketing</h2>
+  </div>
+</div>
+</div>
+
 
 </div>
 
