--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <h3>Research study about New York</h3>
       </div>
     </div>
-
+  </div>
 </div>
 
 <!-- Footer -->
@@ -272,7 +272,6 @@
   <h1>Start learning</h1>
 
 <div class="overview">
-
   <div class="course">
       <h2>Software Engineering</h2>
   </div>
@@ -299,6 +298,31 @@
 </div>
 </div>
 
+<!-- Thesis -->
+
+<div class="thesis">
+  <h1>Thesis exhibit</h1>
+  <div class="video">
+    <div class="screen">
+      <video autoplay controls>
+    <source src="resources/videos/thesis.mp4" type="video/mp4">
+    Ihr Browser kann dieses Video nicht wiedergeben.<br/> Dieser Film zeigt ein Video. Sie können ihn unter <a href="#">Link-Addresse</a> abrufen.
+</video>
+      </div>
+    </div>
+</div>
+
+<!-- Footer -->
+
+<footer class="flex-container">
+  <div class="copyright flex-container">
+    <span>© 2016 Colmar Academy. All rights reserved</span>
+  </div>
+  <div class="impress flex-container">
+    <span class="desktop"><a href="#">Terms</a></span>
+    <span class="desktop"><a href="#">Privacy</a></span>
+  </div>
+</footer>
 
 </div>
 
