--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Capstone</title>
     <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,700" rel="stylesheet">
   </head>
   <body>
 
@@ -13,7 +14,7 @@
 
 <!-- Header -->
 
-<header class="flex-container">
+<header class="flex">
   <div class="logo flex-container">
     <img src="resources/images/ic-logo.svg" />
     <span class="desktop">COLMAR</span>
@@ -55,7 +56,8 @@
       <h4>Emanuel, Sr Strategist at Hiring.com</h4>
     </div>
   </div>
-  <div class="bites flexcontent2">
+  <div class="bites">
+    <div class="example  first flexcontent2">
     <div class="biteimage">
       <img src="resources/images/information-orientation.jpg" />
     </div>
@@ -64,6 +66,8 @@
       <h3>Tue 10/11 & Wed 10/12: 8am-3pm.</h3>
       <h4><a href="#">Read more</a></h4>
     </div>
+    </div>
+    <div class="example flexcontent2">
     <div class="biteimage">
       <img src="resources/images/information-campus.jpg" />
     </div>
@@ -72,6 +76,8 @@
       <h3>Find which campus is close by you</h3>
       <h4><a href="#">Read more</a></h4>
     </div>
+    </div>
+    <div class="example highlight flexcontent2">
     <div class="biteimage">
       <img src="resources/images/information-guest-lecture.jpg" />
     </div>
@@ -79,6 +85,7 @@
       <h2>Our guest lecture</h2>
       <h3>Join a keynote with Oliver Sack <br> about music in medical treatment</h3>
       <h4><a href="#">Read more</a></h4>
+    </div>
     </div>
   </div>
 </div>
@@ -178,7 +185,8 @@
       </div>
     </div>
 
-    <div class="bites flexcontent2">
+    <div class="bites">
+      <div class="example highlight flexcontent2">
       <div class="biteimage">
         <img src="resources/images/thesis-fisma.jpg" />
       </div>
@@ -186,12 +194,15 @@
         <h2>Fisma: Design and</h2>
         <h3>Designer showcases of <br> new prototype product</h3>
       </div>
+      </div>
+      <div class="example flexcontent2">
       <div class="biteimage">
         <img src="resources/images/thesis-now-and-then.jpg" />
       </div>
       <div class="bitetext">
         <h2>Now and then</h2>
         <h3>Research study about New York</h3>
+      </div>
       </div>
     </div>
   </div>
@@ -317,10 +328,6 @@
 <footer class="flex-container">
   <div class="copyright flex-container">
     <span>© 2016 Colmar Academy. All rights reserved</span>
-  </div>
-  <div class="impress flex-container">
-    <span class="desktop"><a href="#">Terms</a></span>
-    <span class="desktop"><a href="#">Privacy</a></span>
   </div>
 </footer>
 
