--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <div class="thesis">
   <h1>Thesis exhibit</h1>
 
-  <div class="thesis flexcontent1">
+  <div class="thesis flexcontent1" role="presentation">
     <div class="video">
       <div class="screen">
         <video autoplay controls>
@@ -186,20 +186,20 @@
     </div>
 
     <div class="bites">
-      <div class="example highlight flexcontent2">
+      <div class="example highlight flexcontent2" role="presentation">
       <div class="biteimage">
         <img src="resources/images/thesis-fisma.jpg" alt="screen and design mock up" />
       </div>
-      <div class="bitetext">
+      <div class="bitetext" role="presentation">
         <h2>Fisma: Design and</h2>
         <h3>Designer showcases of <br> new prototype product</h3>
       </div>
       </div>
-      <div class="example flexcontent2">
+      <div class="example flexcontent2" role="presentation">
       <div class="biteimage">
         <img src="resources/images/thesis-now-and-then.jpg" alt="panorama New York" />
       </div>
-      <div class="bitetext">
+      <div class="bitetext" role="presentation">
         <h2>Now and then</h2>
         <h3>Research study about New York</h3>
       </div>
@@ -211,10 +211,10 @@
 <!-- Footer -->
 
 <footer class="flex-container">
-  <div class="copyright flex-container">
+  <div class="copyright flex-container" role="presentation">
     <span>© 2016 Colmar Academy. All rights reserved</span>
   </div>
-  <div class="impress flex-container">
+  <div class="impress flex-container" role="presentation">
     <span class="desktop"><a href="#">Terms</a></span>
     <span class="desktop"><a href="#">Privacy</a></span>
   </div>
@@ -238,7 +238,7 @@
 <!-- Banner -->
 
 <div class="banner">
-  <div class="box">
+  <div class="box" role="presentation">
   </div>
   <div class="article">
     <h1>Learn something new everyday</h1>
@@ -254,7 +254,7 @@
   <div class="biteimage">
     <img src="resources/images/information-orientation-mobile.jpg" />
   </div>
-  <div class="bitetext">
+  <div class="bitetext" role="presentation">
     <h2>Orientation Date</h2>
     <h3>Tue 10/11 & Wed 10/12: 8am-3pm.</h3>
     <h4><a href="#">Read more</a></h4>
@@ -262,7 +262,7 @@
   <div class="biteimage">
     <img src="resources/images/information-campus-mobile.jpg" />
   </div>
-  <div class="bitetext">
+  <div class="bitetext" role="presentation">
     <h2>Our Campus</h2>
     <h3>Find which campus is close by you</h3>
     <h4><a href="#">Read more</a></h4>
@@ -270,7 +270,7 @@
   <div class="biteimage">
     <img src="resources/images/information-guest-lecture-mobile.jpg" />
   </div>
-  <div class="bitetext">
+  <div class="bitetext" role="presentation">
     <h2>Our guest lecture</h2>
     <h3>Join a keynote with Oliver Sack about music in medical treatment</h3>
     <h4><a href="#">Read more</a></h4>
@@ -283,27 +283,27 @@
   <h1>Start learning</h1>
 
 <div class="overview">
-  <div class="course">
+  <div class="course" role="presentation">
       <h2>Software Engineering</h2>
   </div>
 
-  <div class="course">
+  <div class="course" role="presentation">
       <h2>Computer art</h2>
   </div>
 
-  <div class="course">
+  <div class="course" role="presentation">
       <h2>Design</h2>
   </div>
 
-  <div class="course">
+  <div class="course" role="presentation">
       <h2>Data</h2>
   </div>
 
-  <div class="course">
+  <div class="course" role="presentation">
       <h2>Business</h2>
   </div>
 
-  <div class="course">
+  <div class="course" role="presentation">
       <h2>Marketing</h2>
   </div>
 </div>
@@ -326,7 +326,7 @@
 <!-- Footer -->
 
 <footer class="flex-container">
-  <div class="copyright flex-container">
+  <div class="copyright flex-container" role="presentation">
     <span>© 2016 Colmar Academy. All rights reserved</span>
   </div>
 </footer>
